Add ability to add update tick on header

--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -48,6 +48,14 @@ services:
         class: 'QL\Hal\Controllers\LogoutController'
         arguments: [@session, @url]
 
+    latest.release.page:
+        class: 'QL\Hal\Controllers\LatestReleaseController'
+        arguments:
+            - @latest.release.twig
+    latest.release.twig:
+        parent: 'twig.auto.template'
+        calls: [['setTemplate', ['latest-release.twig']]]
+
     ####################################################################################################################
     # QUEUE CONTROLLERS
     ####################################################################################################################
