--- a/configuration/routes/routes.yml
+++ b/configuration/routes/routes.yml
@@ -35,6 +35,11 @@ parameters:
             route:  '/styleguide'
             stack:  ['styleguide.page']
 
+        latest.release:
+            method: 'GET'
+            route:  '/latest-release'
+            stack:  ['latest.release.page']
+
         ################################################################################################################
         # QUEUE ROUTES
         ################################################################################################################
