Allow admins to disable/enable users
Fix #169

--- a/configuration/di/controllers.yml
+++ b/configuration/di/controllers.yml
@@ -422,6 +422,7 @@ services:
         class: 'QL\Hal\Controllers\User\DisableUserHandler'
         arguments:
             - @doctrine.em
+            - @permissions
             - @session.flasher
             - @hal.user
 
