--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "psr-4": { "QL\\Hal\\": "src", "QL\\Kraken\\": "src-kraken" }
     },
     "repositories": [
-        { "type": "composer", "url": "http://composer" }
+        { "type": "path", "url": "../hal-core" }
     ],
 
     "require": {
@@ -32,15 +32,17 @@
         "guzzle/guzzle": "3.9.*",
         "guzzlehttp/guzzle": "5.*",
         "knplabs/github-api": "1.3.1",
+        "paragonie/random_compat": "~1.1",
         "predis/predis": "~1.0",
         "psr/log": "*",
 
         "ql/exception-toolkit": "~1.0",
-        "ql/hal-core":   "2.8.3",
+        "ql/hal-core":   "dev-master",
         "ql/http-problem": "~1.0",
 
         "ql/mcp-cache":         "~2.2",
-        "ql/mcp-core":          "~1.0",
+        "ql/mcp-common":        "~1.0",
+        "ql/mcp-core":          "~1.1",
         "ql/mcp-corp-account":  "~1.0",
         "ql/mcp-crypto":        "~2.1.2",
         "ql/mcp-qks":           "~2.0.3",
