--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "HAL-9000",
+    "repository": "http://git/web-core/hal",
 
     "dependencies": {
         "bower": "~1.5.1",
         "del": "^1.1.1",
-        "gulp": "^3.6.0",
+        "gulp": "^3.9.0",
         "gulp-autoprefixer": "^2.0.0",
         "gulp-concat": "^2.2.0",
         "gulp-if": "^1.2.0",
@@ -12,9 +13,9 @@
         "gulp-load-plugins": "^0.4.0",
         "gulp-nunjucks": "1.0.3",
         "gulp-rename": "1.2.0",
-        "gulp-sass": "1.3.3",
+        "gulp-sass": "2.1.1",
         "gulp-uglify": "^0.3.0",
-        "gulp-webpack-build": "^0.7.1",
-        "webpack": "^1.8.0"
+        "gulp-webpack-build": "^0.13.1",
+        "webpack": "^1.12.0"
     }
 }
