--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
     "repository": "http://git/web-core/hal",
 
     "dependencies": {
-        "bower": "~1.5.1",
-        "del": "^1.1.1",
-        "gulp": "^3.9.0",
-        "gulp-autoprefixer": "^2.0.0",
-        "gulp-concat": "^2.2.0",
-        "gulp-if": "^1.2.0",
-        "gulp-jshint": "^1.5.3",
-        "gulp-load-plugins": "^0.4.0",
-        "gulp-nunjucks": "1.0.3",
-        "gulp-rename": "1.2.0",
-        "gulp-sass": "2.1.1",
-        "gulp-uglify": "^0.3.0",
-        "gulp-webpack-build": "^0.13.1",
-        "webpack": "^1.12.0"
+        "bower": "~1.6.2",
+        "del": "~2.0.2",
+        "gulp": "~3.9.0",
+
+        "gulp-autoprefixer": "~2.0.0",
+        "gulp-jshint": "~1.5.3",
+        "gulp-nunjucks": "~2.0.0",
+        "gulp-sass": "~2.1.1",
+        "gulp-uglify": "~1.4.2",
+        "gulp-webpack-build": "~0.13.1",
+
+        "jshint-stylish": "~2.0.1",
+        "run-sequence": "~1.1.4",
+        "webpack": "~1.12.2"
     }
 }
