Add ability to favorite apps
Fix #179

--- a/configuration/di.yml
+++ b/configuration/di.yml
@@ -7,6 +7,7 @@ imports:
     - resource: di/controllers.application.yml
     - resource: di/controllers.api.yml
     - resource: di/controllers.api.crud.yml
+    - resource: di/controllers.api.internal.yml
 
 services:
 
